# spellchk-rs

./: .gitignore  .spellchk.toml.example  CHANGELOG.md  Cargo.toml  README.md  test_example.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs
src/checker/: dictionary.rs  mod.rs  suggestions.rs  tokenizer.rs
src/cli/: mod.rs  output.rs
src/dict/: manager.rs  mod.rs
src/parser/: markdown.rs  mod.rs  plaintext.rs  source_code.rs
